--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
                 <a href="https://www.instagram.com/justhighcompany/"
                 target="_blank">
                 <img src="./assets/Avatar.png" 
-                alt="imagem de uma opaca,
-                representando um H">
+                alt="">
                 </a>
                     <p>@JustHighCompany</p>
                 
