--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <div id="profile">
                 <a href="https://www.instagram.com/justhighcompany/"
                 target="_blank">
-                <img src="./assets/Avatar.png" 
-                alt="">
+                    <img src="./assets/Avatar.png" 
+                    alt="imagem de uma opaca.">
                 </a>
                     <p>@JustHighCompany</p>
                 
