--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <a href="#" target="_blank">
                     <ion-icon name="logo-youtube"></ion-icon>
                 </a>
-                <a href="#" target="_blank">
+                <a href="https://www.linkedin.com/in/pedro-barberini-rodrigues-carvalho-6a2221296/" target="_blank">
                     <ion-icon name="logo-linkedin"></ion-icon>
                 </a>
                 
